edit master mlflow

--- a/.github/workflows/ci_mlflow_project.yml
+++ b/.github/workflows/ci_mlflow_project.yml
@@ -3,7 +3,7 @@ name: MLflow Project CI
 on:
   push:
     branches:
-      - main
+      - master
     paths:
       - 'MLProject_LoanApproval/**'
 
