--- a/.github/workflows/ci_mlflow_project.yml
+++ b/.github/workflows/ci_mlflow_project.yml
@@ -15,21 +15,24 @@ jobs:
       contents: write
     defaults:
       run:
-        working-directory: ./MLProject_LoanApproval # Penting!
+        shell: bash -l {0}
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Miniconda
+        uses: conda-incubator/setup-miniconda@v3
         with:
+          activate-environment: ''
+          auto-update-conda: true
           python-version: '3.10.16'
 
       - name: Install MLflow
         run: pip install mlflow>2.22.0 scikit-learn pandas joblib # Tambahkan dependensi skrip
 
       - name: Run MLflow Project
+        working-directory: ./MLProject_LoanApproval # Penting!
         run: mlflow run . 
         # Jika modelling.py di atas membuat trained_model.pkl dan metrics.txt
         # di dalam MLProject_LoanApproval di runner
@@ -39,7 +42,8 @@ jobs:
         with:
           name: model-artifacts # Nama bundel artefak
           path: | # Path relatif terhadap working-directory (MLProject_LoanApproval)
-            trained_model.pkl 
-            metrics.txt
+            MLProject_LoanApproval/mlruns/ 
+            MLProject_LoanApproval/trained_model.pkl 
+            MLProject_LoanApproval/metrics.txt
           # Anda juga bisa mengunggah folder mlruns jika modelling.py menggunakan MLflow logging
           # path: mlruns/
