--- a/.github/workflows/ci_mlflow_project.yml
+++ b/.github/workflows/ci_mlflow_project.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
-          activate-environment: ''
+          activate-environment: true 
           auto-update-conda: true
           python-version: '3.10.16'
 
