--- a/MLProject_LoanApproval/Dockerfile
+++ b/MLProject_LoanApproval/Dockerfile
@@ -4,6 +4,6 @@ FROM python:3.10.16-slim
 WORKDIR /app
 
 # Salin semua file dari MLProject_LoanApproval ke /app di dalam image
-COPY . .
+COPY . /app/
 
-RUN pip install --no-cache-dir mlflow>=2.22.0 pandas scikit-learn joblib numpy matplotlib seaborn
+RUN pip install --no-cache-dir mlflow>=2.22.0 pandas scikit-learn joblib numpy matplotlib seaborn cloudpickle==3.1.1 psutil==7.0.0 scipy==1.15.2
