Edit modelling_CI.py and delete experiment mlflow in script

--- a/.github/workflows/ci_mlflow_project.yml
+++ b/.github/workflows/ci_mlflow_project.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run MLflow Project
         working-directory: ./MLProject_LoanApproval # Penting!
-        run: mlflow run . 
+        run: mlflow run . --experiment-name "CI_Loan_Approval_RF" 
         # Jika modelling.py di atas membuat trained_model.pkl dan metrics.txt
         # di dalam MLProject_LoanApproval di runner
 
