--- a/MLProject_LoanApproval/Dockerfile
+++ b/MLProject_LoanApproval/Dockerfile
@@ -1,9 +1,12 @@
-FROM python:3.10.16-slim 
+FROM continuumio/miniconda3:latest 
 
 # Set working directory
 WORKDIR /app
 
-# Salin semua file dari MLProject_LoanApproval ke /app di dalam image
-COPY . /app/
+COPY conda.yaml .
 
-RUN pip install --no-cache-dir mlflow>=2.22.0 pandas scikit-learn joblib numpy matplotlib seaborn cloudpickle==3.1.1 psutil==7.0.0 scipy==1.15.2
+RUN conda env create -f conda.yaml
+
+COPY . .
+
+# RUN pip install --no-cache-dir mlflow>=2.22.0 pandas scikit-learn joblib numpy matplotlib seaborn cloudpickle==3.1.1 psutil==7.0.0 scipy==1.15.2
